# 4d_association

./: .gitignore  .hgignore  README.md  mocap.sln
data/: readme.txt
data/shelf/: calibration.json  gt.txt  skel.txt
data/shelf/detection/: 0.txt  1.txt  2.txt  3.txt  4.txt
data/skel/SKEL15/: joints.txt  jshape_blend.txt
data/skel/SKEL17/: joints.txt  jshape_blend.txt
data/skel/SKEL19/: joints.txt  jshape_blend.txt
data/skel/SKEL19_old/: joints.txt  jshape_blend.txt
evaluate_shelf/: evaluate_shelf.vcxproj  main.cpp
include/: README.md
mocap/: assimp.props  eigen.props  json.props  mocap.vcxproj  nanogui.props  opencv_release.props  spinnaker.props  tensorrt.props
output/assoc/: readme.txt
output/detect/: readme.txt
output/reproj/: readme.txt
source/: CMakeLists.txt  README.md
source/cli_demo/: CMakeLists.txt  cli_demo.cpp
source/four_d_association/: CMakeLists.txt  associater.cpp  associater.h  camera.h  evaluate_shelf_main.cpp  hungarian_algorithm.cpp  hungarian_algorithm.h  kruskal_associater.h  main.cpp  openpose.cpp  openpose.h  skel_painter.cpp  skel_painter.h  skel_solver.cpp  skel_solver.h  skel_updater.cpp
src/: associater.cpp  associater.h  camera.cpp  color_util.h  kruskal_associater.cpp  kruskal_associater.h  main.cpp  math_util.h  skel.h  skel_driver.cpp  skel_driver.h  skel_painter.cpp  skel_painter.h  skel_solver.cpp  skel_solver.h  skel_updater.cpp  skel_updater.h
